<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_login_gradients">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/detail_margin"
        android:backgroundTint="@color/grey_20">

        <ImageView
            android:id="@+id/detail_product_image"
            android:layout_width="@dimen/detail_image_width"
            android:layout_height="@dimen/detail_image_height"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/content_desc"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey_20">

            <TextView
                style="@style/CategoryDetailTextStyle"
                android:layout_width="@dimen/detail_width"
                android:background="@drawable/background_login"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/category_product_title"
                android:backgroundTint="@color/grey_20"/>

            <TextView
                android:id="@+id/detail_product_name"
                style="@style/DetailTextStyle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:background="@drawable/edittext_style"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/CategoryDetailTextStyle"
                android:layout_width="@dimen/detail_width"
                android:background="@drawable/background_login"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/category_product_isbn"
                android:backgroundTint="@color/grey_20"/>

            <TextView
                android:id="@+id/detail_product_qr"
                style="@style/DetailTextStyle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/edittext_style"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/CategoryDetailTextStyle"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="@dimen/detail_width"
                android:background="@drawable/background_login"
                android:layout_height="wrap_content"
                android:text="@string/category_price"
                android:backgroundTint="@color/grey_20"/>

            <TextView
                android:id="@+id/detail_product_price"
                style="@style/DetailTextStyle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/edittext_style"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/CategoryDetailTextStyle"
                android:layout_width="@dimen/detail_width"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/background_login"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey_20"
                android:text="Costo" />

            <TextView
                android:id="@+id/detail_product_provider"
                style="@style/DetailTextStyle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/edittext_style"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/detail_margin"
            android:paddingTop="@dimen/detail_margin">

            <View
                style="@style/ViewStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/view_height"
                android:layout_weight="1"
                android:background="@color/grey_80" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/category_quantity"
                android:textColor="@color/color_detail_text"
                android:textSize="20sp" />

            <View
                style="@style/ViewStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/view_height"
                android:layout_weight="1"
                android:background="@color/grey_80" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_vertical">

            <Button
                android:id="@+id/detail_minus_button"
                android:layout_width="@dimen/detail_button_width"
                android:layout_height="@dimen/detail_button_width"
                android:background="@drawable/circle_button_remove"
                android:backgroundTint="@color/grey_80"
                android:gravity="center_vertical"
                android:src="@drawable/ic_remove_circle" />

            <TextView
                android:id="@+id/detail_product_quantity"
                android:layout_width="@dimen/detail_quantity_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:gravity="center"
                android:textColor="@color/color_detail_text"
                android:textSize="16sp"
                tools:text="10" />

            <Button
                android:id="@+id/detail_plus_button"
                android:layout_width="@dimen/detail_button_width"
                android:layout_height="@dimen/detail_button_width"
                android:background="@drawable/circle_button_add"
                android:backgroundTint="@color/grey_80"
                android:gravity="center_vertical"
                android:src="@drawable/ic_add_circle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/detail_margin"
            android:paddingTop="@dimen/detail_margin">

            <View
                style="@style/ViewStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/view_height"
                android:layout_weight="1"
                android:background="@color/grey_80" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/supplier"
                android:textColor="@color/color_detail_text"
                android:textSize="20sp" />

            <View
                style="@style/ViewStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/view_height"
                android:layout_weight="1"
                android:background="@color/grey_80" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/CategoryDetailTextStyle"
                android:layout_width="@dimen/detail_width"
                android:layout_height="wrap_content"
                android:background="@drawable/background_login"
                android:text="@string/category_name"
                android:layout_gravity="center"
                android:gravity="center"
                android:backgroundTint="@color/grey_20"/>

            <TextView
                android:id="@+id/detail_supplier_name"
                style="@style/DetailTextStyle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/edittext_style"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/CategoryDetailTextStyle"
                android:layout_width="@dimen/detail_width"
                android:layout_height="wrap_content"
                android:background="@drawable/background_login"
                android:text="Email"
                android:layout_gravity="center"
                android:gravity="center"
                android:backgroundTint="@color/grey_20"/>

            <TextView
                android:id="@+id/detail_supplier_email"
                style="@style/DetailTextStyle"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_style"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <ImageButton
                android:id="@+id/detail_email_button"
                android:layout_width="@dimen/detail_button_width"
                android:layout_height="@dimen/detail_button_width"
                android:layout_gravity="center"
                android:background="@drawable/background_signup"
                android:backgroundTint="@color/grey_80"
                android:contentDescription="@string/content_desc_email"
                android:src="@drawable/ic_email" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/CategoryDetailTextStyle"
                android:layout_width="@dimen/detail_width"
                android:layout_height="wrap_content"
                android:background="@drawable/background_login"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/category_phone"
                android:backgroundTint="@color/grey_20"/>

            <TextView
                android:id="@+id/detail_supplier_phone"
                style="@style/DetailTextStyle"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_style"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <ImageButton
                android:id="@+id/detail_phone_button"
                android:layout_width="@dimen/detail_button_width"
                android:layout_height="@dimen/detail_button_width"
                android:layout_gravity="center"
                android:background="@drawable/background_signup"
                android:backgroundTint="@color/grey_80"
                android:contentDescription="@string/content_desc_phone"
                android:src="@drawable/ic_phone" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>