<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_vertical_margin">

            <LinearLayout
                android:id="@+id/expense_datetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/expense_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left" />

                <TextView
                    android:id="@+id/expense_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/expense_amount_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/expense_datetime"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="top|left">

                <EditText
                    android:id="@+id/expense_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789.,-"
                    android:hint="@string/expense_form_amount_hint"
                    android:inputType="number"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/expense_category_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/expense_amount_wrapper"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/expense_category_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/expense_category"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/expense_top_layer"
                        android:completionThreshold="1"
                        android:hint="@string/expense_form_category_hint"
                        android:paddingLeft="0dp"
                        android:paddingRight="0dp"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <co.lujun.androidtagview.TagContainerLayout
                    android:id="@+id/expense_category_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_horizontal_margin"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    app:container_background_color="@android:color/transparent"
                    app:container_border_color="@android:color/transparent"
                    app:container_border_radius="0dp"
                    app:container_border_width="0dp"
                    app:container_enable_drag="false"
                    app:container_gravity="left"
                    app:horizontal_interval="10dp"
                    app:tag_background_color="@android:color/transparent"
                    app:tag_border_color="@color/colorPrimary"
                    app:tag_border_width="1dp"
                    app:tag_clickable="true"
                    app:tag_corner_radius="0dp"
                    app:tag_horizontal_padding="10dp"
                    app:tag_text_color="#000000"
                    app:tag_text_size="14dp"
                    app:tag_theme="none"
                    app:tag_vertical_padding="8dp"
                    app:vertical_interval="@dimen/activity_vertical_margin" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/expense_description_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/expense_category_row"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/expense_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/expense_form_description_hint"
                    android:inputType="text|textMultiLine|textCapSentences"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/expense_description_wrapper"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/delete_expense_card"
                    style="@style/ButtonStyle"
                    card_view:cardBackgroundColor="@color/colorAccent">

                    <TextView
                        android:id="@+id/delete_expense"
                        style="@style/ButtonTextStyle"
                        android:text="@string/delete_expense_button" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    style="@style/ButtonStyle"
                    android:layout_marginRight="16dp"
                    android:layout_toLeftOf="@+id/create_expense_card"
                    card_view:cardBackgroundColor="@color/white">

                    <TextView
                        android:id="@+id/cancel_expense"
                        style="@style/ButtonTextStyle"
                        android:text="@string/cancel_expense_button" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/create_expense_card"
                    style="@style/ButtonStyle"
                    android:layout_alignParentRight="true"
                    card_view:cardBackgroundColor="@color/colorPrimary">

                    <TextView
                        android:id="@+id/create_expense"
                        style="@style/ButtonTextStyle"
                        android:text="@string/create_expense_button" />
                </androidx.cardview.widget.CardView>

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>